--- a/cn/index.html
+++ b/cn/index.html
@@ -23,9 +23,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="viggo" />
-    <title>WebStack.cc - 设计师网址导航</title>
-    <meta name="keywords" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
-    <meta name="description" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
+    <title>laifajiufo - 网址导航</title>
+    <meta name="keywords" content="私人网址导航">
+    <meta name="description" content="laifajiufo - 收集自己常用网站">
     <link rel="shortcut icon" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Arimo:400,700,400italic">
     <link rel="stylesheet" href="../assets/css/fonts/linecons/css/linecons.css">
@@ -43,15 +43,15 @@
     <![endif]-->
     <!-- / FB Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
-    <meta property="og:title" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
-    <meta property="og:description" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
+    <meta property="og:url" content="http://www.laifajiufo.com/">
+    <meta property="og:title" content="laifajiufo - 收集自己常用网站">
+    <meta property="og:description" content="私人网址导航">
     <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
-    <meta property="og:site_name" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
+    <meta property="og:site_name" content="laifajiufo - 收集自己常用网站">
     <!-- / Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="WebStack - 收集国内外优秀设计网站、UI设计资源网站、灵感创意网站、素材资源网站，定时更新分享优质产品设计书签。www.webstack.cc">
-    <meta name="twitter:description" content="UI设计,UI设计素材,设计导航,网址导航,设计资源,创意导航,创意网站导航,设计师网址大全,设计素材大全,设计师导航,UI设计资源,优秀UI设计欣赏,设计师导航,设计师网址大全,设计师网址导航,产品经理网址导航,交互设计师网址导航,www.webstack.cc">
+    <meta name="twitter:title" content="laifajiufo - 收集自己常用网站">
+    <meta name="twitter:description" content="私人网址导航">
     <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
 </head>
 
@@ -300,7 +300,7 @@
                         </a>
                         <ul class="dropdown-menu languages">
                             <li>
-                                <a href="../en/index.html">
+                                <a href="../cn/index.html">
                                     <img src="../assets/images/flags/flag-us.png" alt="flag-us" /> English
                                 </a>
                             </li>
@@ -314,7 +314,7 @@
                 </ul>
                 <ul class="user-info-menu right-links list-inline list-unstyled">
                     <li class="hidden-sm hidden-xs">
-                        <a href="https://github.com/WebStackPage/WebStackPage.github.io" target="_blank">
+                        <a href="https://github.com/laifajiufo" target="_blank">
                             <i class="fa-github"></i>  GitHub
                         </a>
                     </li>
@@ -326,61 +326,61 @@
             <h4 class="text-gray"><i class="linecons-tag" style="margin-right: 7px;" id="常用推荐"></i>常用推荐</h4>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://dribbble.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://dribbble.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.bilibili.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.bilibili.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/dribbble.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/bilibili.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Dribbble</strong>
+                                    <strong>哔哩哔哩</strong>
                                 </a>
-                                <p class="overflowClip_2">全球UI设计师作品分享平台。</p>
+                                <p class="overflowClip_2">国内知名的视频弹幕网站。</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://behance.net/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://behance.net/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.rt-thread.org/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.rt-thread.org/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/behance.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/rtthread.jpg" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Behance</strong>
+                                    <strong>RT-Thread</strong>
                                 </a>
-                                <p class="overflowClip_2">Adobe旗下的设计师交流平台，来自世界各地的设计师在这里分享自己的作品。</p>
+                                <p class="overflowClip_2">国内开源物联网操作系统。</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.ui.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.ui.cn/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.szlcsc.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.szlcsc.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/uicn.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/lcsc.jpg" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>UI中国</strong>
+                                    <strong>立创商城</strong>
                                 </a>
-                                <p class="overflowClip_2">图形交互与界面设计交流、作品展示、学习平台。</p>
+                                <p class="overflowClip_2">一站式元器件采购自营商城。</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://www.zcool.com.cn/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://www.zcool.com.cn/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://oshwhub.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://oshwhub.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/zcool.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/lckyyj.png" class="lozad img-circle" width="40">
                             </a>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>站酷</strong>
+                                    <strong>立创开源硬件</strong>
                                 </a>
-                                <p class="overflowClip_2">中国人气设计师互动平台</p>
+                                <p class="overflowClip_2">开源硬件平台</p>
                             </div>
                         </div>
                     </div>
@@ -388,33 +388,33 @@
             </div>
             <div class="row">
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.pinterest.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.pinterest.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://lckfb.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://lckfb.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/pinterest.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/lckfb.png" class="lozad img-circle" width="40">
                             </a>
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>Pinterest</strong>
+                                    <strong>立创开发板</strong>
                                 </a>
-                                <p class="overflowClip_2">全球美图收藏采集站</p>
+                                <p class="overflowClip_2">不靠卖板赚钱，以培养中国工程师为己任。</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-3">
-                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('http://huaban.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="http://huaban.com/">
+                    <div class="xe-widget xe-conversations box2 label-info" onclick="window.open('https://www.icworkshop.com/', '_blank')" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="https://www.icworkshop.com/">
                         <div class="xe-comment-entry">
                             <a class="xe-user-img">
-                                <img data-src="../assets/images/logos/huaban.png" class="lozad img-circle" width="40">
+                                <img data-src="../assets/images/logos/cxgf.jpg" class="lozad img-circle" width="40">
                             </a>
                             <span class="label label-info" data-toggle="tooltip" data-placement="left" title="" data-original-title="Hello I am a Tooltip"></span>
                             <div class="xe-comment">
                                 <a href="#" class="xe-user-name overflowClip_1">
-                                    <strong>花瓣</strong>
+                                    <strong>创芯工坊</strong>
                                 </a>
-                                <p class="overflowClip_2">收集灵感,保存有用的素材</p>
+                                <p class="overflowClip_2">全球领先的芯片程序在线烧录平台。</p>
                             </div>
                         </div>
                     </div>
@@ -4216,8 +4216,8 @@
                 <div class="footer-inner">
                     <!-- Add your copyright text here -->
                     <div class="footer-text">
-                        &copy; 2017-2022
-                        <a href="../cn/about.html"><strong>WebStack</strong></a> design by <a href="https://www.viggoz.com" target="_blank"><strong>Viggo</strong></a>
+                        &copy; 2022-2026
+                        <a href="../cn/about.html"><strong>龙的网址导航</strong></a> design by <a href="https://github.com/laifajiufo" target="_blank"><strong>laifajiufo</strong></a>
                         <!--  - Purchase for only <strong>23$</strong> -->
                     </div>
                     <!-- Go to Top Link, just add rel="go-top" to any link to add this functionality -->
